--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 2,
    "id": "2f045c32",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "4  36,000 kms    Diesel  "
       ]
      },
-     "execution_count": 312,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 3,
    "id": "4f23dc69",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "(892, 6)"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 4,
    "id": "21cb11af",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 5,
    "id": "671fa8c0",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 6,
    "id": "97b54976",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
        "4  36,000 kms    Diesel  "
       ]
      },
-     "execution_count": 316,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 7,
    "id": "71e18db3",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
        "       'Tata Zest XM Diesel'], dtype=object)"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 8,
    "id": "d8786835",
    "metadata": {},
    "outputs": [
@@ -588,7 +588,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 318,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 9,
    "id": "1376f864",
    "metadata": {},
    "outputs": [],
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 10,
    "id": "57976bbf",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 11,
    "id": "ecb8eac1",
    "metadata": {},
    "outputs": [
@@ -804,7 +804,7 @@
        "[837 rows x 7 columns]"
       ]
      },
-     "execution_count": 321,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 12,
    "id": "38472b65",
    "metadata": {},
    "outputs": [
@@ -921,7 +921,7 @@
        "836    Diesel    Mahindra Quanto C8  "
       ]
      },
-     "execution_count": 322,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 13,
    "id": "a117733c",
    "metadata": {},
    "outputs": [
@@ -1031,7 +1031,7 @@
        "4  Ford EcoSport Titanium  "
       ]
      },
-     "execution_count": 323,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 14,
    "id": "503918eb",
    "metadata": {},
    "outputs": [],
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 15,
    "id": "ca86db0b",
    "metadata": {},
    "outputs": [
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 16,
    "id": "5b0fd172",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1188,7 @@
        "4  Ford EcoSport Titanium  "
       ]
      },
-     "execution_count": 326,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 17,
    "id": "4b73a8e7",
    "metadata": {},
    "outputs": [
@@ -1300,7 +1300,7 @@
        "4  Ford EcoSport Titanium  "
       ]
      },
-     "execution_count": 327,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 18,
    "id": "3dfe01ab",
    "metadata": {},
    "outputs": [
@@ -1404,7 +1404,7 @@
        "4      Ford  2012  175000  41,000 kms    Diesel               Ford Figo"
       ]
      },
-     "execution_count": 328,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 19,
    "id": "81aacec6",
    "metadata": {},
    "outputs": [
@@ -1426,7 +1426,7 @@
        "(816, 6)"
       ]
      },
-     "execution_count": 329,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 20,
    "id": "0e9eeb8a",
    "metadata": {},
    "outputs": [
@@ -1529,7 +1529,7 @@
        "4      Ford  2012  175000  41,000 kms    Diesel               Ford Figo"
       ]
      },
-     "execution_count": 330,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 21,
    "id": "2bb5b664",
    "metadata": {},
    "outputs": [
@@ -1633,7 +1633,7 @@
        "4      Ford  2012  175000      41000    Diesel               Ford Figo"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 22,
    "id": "f2d56cf8",
    "metadata": {},
    "outputs": [
@@ -1658,7 +1658,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 23,
    "id": "0e66d6fe",
    "metadata": {},
    "outputs": [],
@@ -1679,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 24,
    "id": "f77176be",
    "metadata": {},
    "outputs": [
@@ -1771,7 +1771,7 @@
        "4      Ford  2012  175000       41000    Diesel               Ford Figo"
       ]
      },
-     "execution_count": 334,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1782,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 25,
    "id": "70e8ee90",
    "metadata": {},
    "outputs": [
@@ -1812,7 +1812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 26,
    "id": "6dcc7fd9",
    "metadata": {},
    "outputs": [
@@ -1904,7 +1904,7 @@
        "4      Ford  2012  175000       41000    Diesel               Ford Figo"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1923,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 27,
    "id": "86b6c364",
    "metadata": {},
    "outputs": [],
@@ -1940,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 28,
    "id": "93d4effd",
    "metadata": {},
    "outputs": [],
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 29,
    "id": "73d06592",
    "metadata": {},
    "outputs": [],
@@ -1962,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 30,
    "id": "2276f477",
    "metadata": {},
    "outputs": [
@@ -2189,7 +2189,7 @@
        "[5 rows x 288 columns]"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2201,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 31,
    "id": "c1109486",
    "metadata": {},
    "outputs": [
@@ -2428,7 +2428,7 @@
        "[5 rows x 285 columns]"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2440,7 +2440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 32,
    "id": "c4913ec0",
    "metadata": {},
    "outputs": [
@@ -2450,7 +2450,7 @@
        "(816, 285)"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2461,7 +2461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 33,
    "id": "26c2c3fa",
    "metadata": {},
    "outputs": [],
@@ -2479,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 34,
    "id": "f11a108d",
    "metadata": {},
    "outputs": [],
@@ -2489,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 35,
    "id": "c72c3f8d",
    "metadata": {},
    "outputs": [
@@ -2716,7 +2716,7 @@
        "[5 rows x 285 columns]"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2727,7 +2727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 36,
    "id": "3286b6bf",
    "metadata": {},
    "outputs": [],
@@ -2743,7 +2743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 37,
    "id": "def8491a",
    "metadata": {},
    "outputs": [],
@@ -2759,7 +2759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 38,
    "id": "dc545a15",
    "metadata": {},
    "outputs": [],
@@ -2775,7 +2775,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 39,
+   "id": "231d9d31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#checking duplicates\n",
+    "data = data[~(data.duplicated())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "50500c8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(622, 285)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "a5667f20",
    "metadata": {},
    "outputs": [],
